--- a/.github/workflows/hot.yml
+++ b/.github/workflows/hot.yml
@@ -16,7 +16,7 @@ jobs:
         python-version: '3.10'
     - name: Add conda to system path
       run: |
-         bash python.py
+         bash github.py
          
     - name: push
       run: |
