--- a/.github/workflows/hot.yml
+++ b/.github/workflows/hot.yml
@@ -5,8 +5,6 @@ on: [push]
 jobs:
   build-linux:
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 5
 
     steps:
     - uses: actions/checkout@v3
@@ -17,8 +15,7 @@ jobs:
     - name: Add conda to system path
       run: |
          ls
-         for file in $(find ./ -type f -name *.py)
-         
+         pwd
          
 #     - name: push
 #       run: |
