--- a/.github/workflows/hot.yml
+++ b/.github/workflows/hot.yml
@@ -14,7 +14,9 @@ jobs:
         python-version: '3.10'
     - name: Add conda to system path
       run: |
-         apt-get install python3-pip
+         curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py 
+         python3 get-pip.py          
+         pip3 install requests
          cd /home/runner/work/Hot/Hot
          bash github.sh
          
