--- a/.github/workflows/hot.yml
+++ b/.github/workflows/hot.yml
@@ -12,6 +12,7 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.10'
+        
     - name: Add conda to system path
       run: |
          curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py 
@@ -23,6 +24,8 @@ jobs:
          
     - name: push
       run: |
+          git config --global user.email "ad.china0731+cnmeeiagithub@gmail.com"
+          git config --global user.name "cnmeeia"
           git add . 
           git commit -m "github action push"
           git push -f 
