--- a/.github/workflows/hot.yml
+++ b/.github/workflows/hot.yml
@@ -18,8 +18,7 @@ jobs:
          curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py 
          python3 get-pip.py          
          pip3 install requests
-         cd /home/runner/work/Hot/Hot
-         bash github.sh
+         bash python.sh
          
          
          
