--- a/.github/workflows/hot.yml
+++ b/.github/workflows/hot.yml
@@ -18,6 +18,10 @@ jobs:
          curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py 
          python3 get-pip.py          
          pip3 install requests
+
+
+    - name: run
+      run: | 
          bash python.sh
          
          
